--- a/views/twitter/search.ejs
+++ b/views/twitter/search.ejs
@@ -38,7 +38,7 @@
     </div>
   </div>
   <%# ツイッター情報表示用のコンテナ。 %>
-  <div class="container">
+  <div class="container mb-3">
     <div class="row justify-content-center">
       <div class="col-10">
         <div id="carousel-controls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
