partial化、ナビバー対応

--- a/views/admin/save.ejs
+++ b/views/admin/save.ejs
@@ -1,6 +1,8 @@
 <%# 管理者ページのトップ画面 %>
 <seciton class="ap-admin">
-  <div class="container">
+  <%# ナビゲーションバー %>
+  <%- include("../partials/_navbar") %>
+  <div class="container vh-admin">
     <div class="row">
       <div class="col-12 d-flex justify-content-center">
         <h2 class="admin-title">管理者ページ</h1>
