--- a/views/admin/success.ejs
+++ b/views/admin/success.ejs
@@ -1,6 +1,8 @@
 <%# 管理者ページ(データ更新成功画面) %>
 <seciton class="ap-admin-success">
-  <div class="container">
+  <%# ナビゲーションバー %>
+  <%- include("../partials/_navbar") %>
+  <div class="container vh-admin">
     <div class="row">
       <div class="col text-center">
         <p class="fs-4">
