--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,7 @@
 <body class="bg-primary text-light mt-3">
   <%# ここにrenderでEJSを表示します) %>
   <%- body %>
+  <%- include("partials/_footer") %>
 </body>
 
 </html>
