--- a/views/partials/_admin.ejs
+++ b/views/partials/_admin.ejs
@@ -1,5 +1,5 @@
 <%# データベース更新画面 %>
-<div class="container mt-5 vh-admin">
+<div class="container mt-5 cus-vh-admin">
   <div class="d-flex  flex-column align-items-center justify-content-start h-100">
     <h2 class="admin-title mb-4">DB更新</h2>
     <div class="text-center">
