--- a/public/css/twitter_app.css
+++ b/public/css/twitter_app.css
@@ -81,6 +81,16 @@
   text-align: center;
 }
 
-.vh-admin {
+.cus-vh-admin {
   height: 65vh;
+}
+
+.cus-icon-float {
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 0 3px rgba(86, 86, 86, 0.1);
+  transition: ease box-shadow 0.3s;
+}
+
+.cus-icon-float:hover {
+  box-shadow: 0 0 1px 2px rgba(0, 0, 0, 0.2), 0 0 0px 6px rgba(86, 86, 86, 0.1);
+  transform: scale(1.04, 1.04);
 }
