--- a/views/admin/success.ejs
+++ b/views/admin/success.ejs
@@ -2,7 +2,7 @@
 <seciton class="ap-admin-success">
   <%# ナビゲーションバー %>
   <%- include("../partials/_navbar") %>
-  <div class="container vh-admin">
+  <div class="container cus-vh-admin">
     <div class="row">
       <div class="col text-center">
         <p class="fs-4">
