--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -7,7 +7,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav02">
         <ul class="navbar-nav">
-          <li class="nav-item ps-2 ps-md-3 active"><a class="nav-link" href="./twitter">Node.jsサイト</a></li>
+          <li class="nav-item ps-2 ps-md-3 active"><a class="nav-link" href="https://get-infomations.glitch.me/twitter">Node.jsサイト</a></li>
           <li class="nav-item ps-2 ps-md-3 "><a class="nav-link" href="https://get-twitters.onrender.com/twitters.php" target="_blank">PHPサイト</a></li>
           <li class="nav-item ps-2 ps-md-3 "><a class="nav-link" href="https://www.hellowork.mhlw.go.jp/" target="_blank">ハローワーク</a></li>
         </ul>
